--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_maps_flutter: ^2.9.0
   firebase_auth: ^5.1.4
   cloud_firestore: ^5.2.1
+  image_picker: ^1.1.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
