--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+GOOGLE_MAPS_API_KEY=AIzaSyDILjowb0kfxT4cVlLY4ubqbu0El3DRMJk
