--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,10 +41,12 @@ android {
         applicationId = "com.example.alot_mobiledevelopment"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = 21
+        minSdk = 23
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+        resValue "string", "google_maps_api_key", GOOGLE_MAPS_API_KEY
+
     }
 
     buildTypes {
