--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,20 +18,16 @@
                  to determine the Window background behind the Flutter UI. -->
             <meta-data
               android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
+              android:resource="@style/NormalTheme"/>
+              <meta-data
               android:name="com.google.android.geo.API_KEY"
-              android:value="AIzaSyDILjowb0kfxT4cVlLY4ubqbu0El3DRMJk"/>
-              />
+              android:value="@string/google_maps_api_key"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <fragment android:id="@+id/autocomplete_fragment"
-  android:layout_width="match_parent"
-  android:layout_height="wrap_content"
-  android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-  />
+        
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
