--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   firebase_core: ^3.3.0
   google_maps_flutter: ^2.9.0
   firebase_auth: ^5.1.4
   cloud_firestore: ^5.2.1
   image_picker: ^1.1.2
   permission_handler: ^11.3.1
+  google_maps_flutter_web: ^0.5.10
+  flutter_svg: ^2.0.10+1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
